--- a/app/views/albums/_form.html.erb
+++ b/app/views/albums/_form.html.erb
@@ -16,6 +16,11 @@
       <%= f.label :name %><br />
       <%= f.text_field :name, class: "input-xlarge" %>
     </div>
+    
+    <div class="control-group">
+      <%= f.label  :artist %> (<%= link_to 'Create New', new_artist_path %>)
+      <%= f.collection_select :artist_id, Artist.all.sort_by {|i| i.name.downcase}, :id, :name, {include_blank: 'select an Artist', selected: @selected_artist} %>
+    </div>
   <% end %>
 
   <div class="actions">
