--- a/app/views/songs/index.html.erb
+++ b/app/views/songs/index.html.erb
@@ -24,7 +24,7 @@
 
     <table id="songs" class="table table-striped table-condensed">
       <tbody>
-      <% songz = @songs.sort_by {|i| i.name.downcase} %>
+      <% songz = @songs.sort_by {|i| i.sort_name.downcase} %>
       <% songz.each_with_index do |song, index| %>
 
         <% album_name = song.album.nil?  ?  ""  : song.album.name  %>
