--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -6,6 +6,10 @@
 
 </br>
 
+
+<div class="artist-background" style="background-image: url(<%= @artist.get_art %>) no-repeat 0 50%">
+<%= image_tag(@artist.get_art) %>
+
 <table>
   <tr>
     <th></th>
@@ -31,6 +35,6 @@
   <% end %>
 </table>
 
-<br>
+<br><br>
 
-<br>
+</div>
