Add playlists scaffold

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,6 +7,7 @@
         <li><%= link_to "Albums",  albums_path  %></li>
         <li><%= link_to "Songs",   songs_path   %></li>
         <li><%= link_to "Genres",  genres_path  %></li>
+        <li><%= link_to "Playlists",  playlists_path  %></li>
       </ul>
        <ul class="nav all-stats pull-right">
         <%# if user_signed_in? %>
