--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -2,7 +2,7 @@
   <p id="notice" class="alert alert-success"><%= notice %></p>
 <% end %>
 
-<%= render partial: "layouts/hoverable_index_title", locals: {category: @songs} %>
+<%= render partial: "layouts/hoverable_title", locals: {category: @playlist} %>
 <hr>
 
     <table id="songs_headings">
@@ -24,7 +24,7 @@
 
     <table id="songs" class="table table-striped table-condensed">
       <tbody>
-      <% songz = @songs.sort_by {|i| i.sort_name.downcase} %>
+      <% songz = @playlist.songs.sort_by {|i| i.sort_name.downcase} %>
       <% songz.each_with_index do |song, index| %>
 
         <% album_name = song.album.nil?  ?  ""  : song.album.name  %>
