--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,16 +8,14 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- *= require_self
+ * require_self
  
- * require_directory .
- * require_tree ../../../vendor/assets/stylesheets/.
  *= require_tree .
+ *= require_tree ../../../vendor/assets/stylesheets/.
  *= require flat-ui
  *= require font-awesome
- * require defaultTheme
  *= require override
  */
 
-@import "bootstrap";
+// @import "bootstrap";
 
