--- a/app/views/playlists/_form.html.erb
+++ b/app/views/playlists/_form.html.erb
@@ -18,14 +18,18 @@
     </div>
   <% end %>
 
-  <%= field_set_tag "Add Songs" do %>
+  <fieldset>
+    <legend>Add Songs (<%= link_to 'Create New', new_song_path %>):</legend>
     <div class="control-group content-scroll">
-      <% Song.all.sort_by {|i| i.artist.sort_name.downcase}.each do |song| %>
-        <%= check_box_tag 'song_ids[]', song.id, false, {:"data-toggle" => "checkbox"} %>
-        <%= label_tag 'song[name]', song.print(nil, true, nil, false) %><br>
+      <% Song.all.sort {|i, j| if i.artist.sort_name.downcase == j.artist.sort_name.downcase; i.sort_name.downcase <=> j.sort_name.downcase; else i.artist.sort_name.downcase <=> j.artist.sort_name.downcase; end}.each do |song| %>
+        
+        <%  is_checked  =  @playlist.song_ids.include?(song.id)  ?  true  :  false %>
+        <%= check_box_tag 'playlist[song_ids][]', song.id, is_checked, {:"data-toggle" => "checkbox"} %>
+        <%= label_tag 'playlist[song][name]', song.print(nil, true, nil, false) %><br>
+
       <% end %>
     </div>
-  <% end %>
+  </fieldset>
 
   <div class="actions">
     <%= f.submit "#{@action} Playlist", class: "btn btn-primary" %>
