--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -14,13 +14,15 @@
   <br>
 
   
-    <%= link_to 'Add New Song',   new_song_path %>
+    <%= link_to 'Add New Song',    new_song_path %>
     <br>
-    <%= link_to 'Add New Artist', new_artist_path %>
+    <%= link_to 'Add New Artist',  new_artist_path %>
     <br>
-    <%= link_to 'Add New Album',  new_album_path %>
+    <%= link_to 'Add New Album',   new_album_path %>
     <br>
-    <%= link_to 'Add New Genre',  new_genre_path %>
+    <%= link_to 'Add New Genre',   new_genre_path %>
+    <br>
+    <%= link_to 'Add New Playlist',new_playlist_path %>
   
 </div>
 
