--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -3,7 +3,7 @@
     <div class="navbar-container">
       <h1><a href="/" class="brand"> Playlisterrr </a></h1>
       <ul class="nav all-stats">
-        <li><%= link_to "Artists", artists_path %></li>
+        <li><%= link_to "Artists", webartists_path %></li>
         <li><%= link_to "Albums",  albums_path  %></li>
         <li><%= link_to "Songs",   songs_path   %></li>
         <li><%= link_to "Genres",  genres_path  %></li>
