--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
   <br>
   <h3>Browse by:</h3>
     <p>
-    <li><%= link_to 'Artist', artists_path %></li>
+    <li><%= link_to 'Artist', webartists_path %></li>
     <li><%= link_to 'Album',  albums_path  %></li>
     <li><%= link_to 'Song',   songs_path   %></li>
     <li><%= link_to 'Genre',  genres_path  %></li>
