--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,13 +1,14 @@
 <% if !notice.nil? %>
   <p id="notice" class="alert alert-success"><%= notice %></p>
 <% end %>
-
+<h1>Most Played Artists</h1>
+<p><i>The week of <%= Date.today.at_beginning_of_week.to_formatted_s(:long_ordinal) %></i></p>
 <div  class="content-scroll">
   <ol>
     <% Artist.top_artists.each do |artist| %>
       <li>
         <div class="hoverable">
-          <pre><%= link_to artist %><span class="admin">  | <%= link_to "Edit", edit_artist_path(artist) %> | <%= link_to 'Delete', artist, method: :delete, data: { confirm: 'Are you sure?' } %></span></pre>
+          <pre><%= link_to artist %></pre>
         </div>
       </li>
     <% end %>
