--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -8,7 +8,7 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
- * require_self
+ *= require_self
  
  *= require_tree .
  *= require_tree ../../../vendor/assets/stylesheets/.
@@ -17,5 +17,4 @@
  *= require override
  */
 
-// @import "bootstrap";
-
+@import "bootstrap";
