got the artist to artist-song links working

--- a/app/views/webartists/index.html.erb
+++ b/app/views/webartists/index.html.erb
@@ -8,7 +8,7 @@
     <% Webartist.top_artists.each do |webartist| %>
       <li>
         <div class="hoverable">
-          <pre><%= link_to webartist %></pre>
+          <pre><%= link_to webartist, "/webartists/#{webartist}" %></pre>
         </div>
       </li>
     <% end %>
