--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -14,7 +14,7 @@
 <ul>
 Artist: <%= link_to @song.artist.name, artist_path(@song.artist) %><br>
 Album:  <%= link_to @album_name,  @album_link   %><br>
-Genre:  <%= link_to @song.genre.name,  genre_path(@song.genre)   %><br>
+Genre:  <%= link_to @genre_name,  @genre_link   %><br>
 </ul>
 
 <br>
