--- a/app/views/playlists/show.html.erb
+++ b/app/views/playlists/show.html.erb
@@ -2,7 +2,24 @@
   <p id="notice" class="alert alert-success"><%= notice %></p>
 <% end %>
 
-<%= render partial: "layouts/hoverable_title", locals: {category: @playlist} %>
+<h3><%= link_to "Playlists", playlists_path %></h3>
+
+<div class="hoverable">
+  <h2 class="inline"><strong><%= @playlist.name %></strong></h2>
+
+  <span class="admin reset-font">
+
+    <%= link_to '<span class="fui-new-16"></span> Edit'.html_safe, edit_playlist_path(@playlist), class: "btn btn-small btn-warning" %>
+
+    <%= link_to '<span class="fui-cross-16"></span> Delete'.html_safe, @playlist, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-small btn-danger" %>
+
+    <%= link_to '<span class="fui-plus-16"></span> Add Songs to Playlist'.html_safe, edit_playlist_path(@playlist), class: "btn btn-small btn-success" %>
+
+    <%= link_to '<span class="fui-plus-16"></span> Create New Song'.html_safe, new_song_path, class: "btn btn-small btn-info" %>
+
+  </span>
+</div>
+
 <hr>
 
     <table id="songs_headings">
