--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -17,12 +17,45 @@ Album:  <%= link_to @album_name,  @album_link   %><br>
 Genre:  <%= link_to @genre_name,  @genre_link   %><br>
 </ul>
 
-<br>
+<%= form_for @song, :html => {class: "form-inline"} do |f| %>
+  <%= f.text_field :name, type: "hidden" %>
+  <%= f.text_field :artist_id, type: "hidden" %>
+  <%= f.text_field :album_id, type: "hidden" %>
+
+  Add to Playlists:  (<%= link_to 'Create New', new_playlist_path %>)
+  <%= f.collection_select :playlist_ids, Playlist.all.sort_by {|i| i.sort_name.downcase}, :id, :name, {selected: @song.playlist_ids}, class: "select-block multi-select", multiple: "multiple" %>
+  <%= f.submit "Update", class: "btn btn-info" %>
+<% end %>
+
 
 <iframe src='http://www.youtube.com/embed/<%= @video_id %>' width=640 height=480 frameborder=0></iframe>
 
+
+<br>
 <br>
 <br>
 
 <%= link_to 'Edit', edit_song_path(@song) %> |
 <%= link_to 'Back', songs_path %>
+
+
+<script>
+  $('.dropdown input, .dropdown label').click(function (event) {
+    event.stopPropagation();
+  });
+</script>
+
+<script type="text/javascript">
+  $(document).ready(function() {
+    // window.prettyPrint() && prettyPrint();
+
+    $('.multi-select').multiselect({
+      includeSelectAllOption: true,
+      enableFiltering: true,
+      maxHeight: 300,
+      buttonWidth: '300px',
+      buttonClass: 'btn btn-primary'
+    });
+
+  });
+</script>
