--- a/app/views/songs/show.html.erb
+++ b/app/views/songs/show.html.erb
@@ -19,7 +19,7 @@ Genre:  <%= link_to @song.genre.name,  genre_path(@song.genre)   %><br>
 
 <br>
 
-<iframe src='http://www.youtube.com/embed/<%= @video_id %>' width=640 height=480 frameborder=0></iframe>
+<a class="fancybox" href='http://www.youtube.com/watch?v=<%= @video_id %>'><img src='http://img.youtube.com/vi/<%= @video_id %>/0.jpg' width="300" height="300" ></a>
 
 <br>
 <br>
