I <3 fancybox (it worksgit st)

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,12 +11,11 @@
  *= require_self
  
  *= require_tree .
- * require_tree ../../../vendor/assets/stylesheets/.
  *= require bootstrap
  *= require flat-ui
  *= require font-awesome
+ *= require jquery.fancybox
  *= require override
  */
 
-// @import "bootstrap";
 
