--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -8,7 +8,7 @@
 
 
 <div class="artist-background" style="background-image: url(<%= @artist.get_art %>) no-repeat 0 50%">
-<%= image_tag(@artist.get_art) if @artist.get_art %>
+<%= image_tag(@artist.get_art(-2)) if @artist.get_art %>
 
 <table>
   <tr>
