--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,7 +2,23 @@
   <p id="notice" class="alert alert-success"><%= notice %></p>
 <% end %>
 
-<%= render partial: "layouts/hoverable_title", locals: {category: @artist} %>
+<h3><%= link_to "Artists", artists_path %></h3>
+
+<div class="hoverable">
+  <h2 class="inline"><strong><%= @artist.name %></strong></h2>
+
+  <span class="admin reset-font">
+
+    <%= link_to '<span class="fui-new-16"></span> Edit'.html_safe, edit_artist_path(@artist), class: "btn btn-small btn-warning" %>
+
+    <%= link_to '<span class="fui-cross-16"></span> Delete'.html_safe, @artist, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-small btn-danger" %>
+
+    <%= link_to '<span class="fui-plus-16"></span> Add Song'.html_safe, new_song_path, class: "btn btn-small btn-info" %>
+
+    <%= link_to '<span class="fui-plus-16"></span> Add Album'.html_safe, new_album_path, class: "btn btn-small btn-info" %>
+
+  </span>
+</div>
 
 </br>
 
