--- a/app/views/layouts/_hoverable_title.html.erb
+++ b/app/views/layouts/_hoverable_title.html.erb
@@ -13,7 +13,7 @@
 
     <%= link_to '<span class="fui-cross-16"></span> Delete'.html_safe, category, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-small btn-danger" %>
 
-    <%= link_to '<span class="fui-plus-16"></span> Add Song'.html_safe, self.send("new_song_path"), class: "btn btn-small btn-info" %>
+    <%= link_to '<span class="fui-plus-16"></span> Add Song'.html_safe, new_song_path, class: "btn btn-small btn-info" %>
 
   </span>
 
