--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -19,7 +19,7 @@
         <li class="dropdown">
           <a id="drop2" href="/" role="button" class="dropdown-toggle" data-toggle="dropdown">Discover <b class="caret"></b></a>
           <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
-            <li><%= link_to "Top Artists",   artists_path   %></li>
+            <li><%= link_to "Top Artists",   webartists_path   %></li>
             <li><%= link_to "Top Songs",     songs_path     %></li>
           </ul>
         </li>
