--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -16,8 +16,8 @@
 
   <h3>Discover:</h3>
     <p>
-    <li><%= link_to 'Top Artists',   artists_path    %></li>
-    <li><%= link_to 'Top Songs',     albums_path     %></li>
+    <li><%= link_to 'Top Artists',   webartists_path    %></li>
+    <li><%= link_to 'Top Songs',     songs_path     %></li>
     </p>
   <br>
   
