--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,12 +1,16 @@
 <div class="navbar navbar-fixed-top navbar-inverse">
   <div class="navbar-inner">
     <div class="navbar-container">
-      <h1><a href="/" class="brand"> Playlisterrr </a></h1>
+      <h1><a href="/" class="brand"> Playlistr.io </a></h1>
       
       <ul class="nav all-stats">
 
         <li class="dropdown">
-          <a id="drop1" href="<%= songs_path %>" role="button" class="dropdown-toggle" data-toggle="dropdown">Browse by <b class="caret"></b></a>
+          <a id="drop1" href="<%= songs_path %>" role="button" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="icon-list"></i>
+            <span class="hideable-nav">Browse by </span>
+            <b class="caret"></b>
+          </a>
           <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
             <li><%= link_to "Artists",   artists_path   %></li>
             <li><%= link_to "Albums",    albums_path    %></li>
@@ -17,7 +21,11 @@
         </li>
 
         <li class="dropdown">
-          <a id="drop2" href="/" role="button" class="dropdown-toggle" data-toggle="dropdown">Discover <b class="caret"></b></a>
+          <a id="drop2" href="/" role="button" class="dropdown-toggle" data-toggle="dropdown">
+            <i class="icon-music"></i> 
+            <span class="hideable-nav">Discover </span>
+            <b class="caret"></b>
+          </a>
           <ul class="dropdown-menu" role="menu" aria-labelledby="drop1">
             <li><%= link_to "Top Artists",   webartists_path   %></li>
             <li><%= link_to "Top Songs",     songs_path     %></li>
@@ -33,7 +41,7 @@
         <%# else %>
           <li><%# link_to "Register", register_path %></li>
           <li><%# link_to "Log In", login_path %></li> -->
-          <li><a>Log In</a></li>
+          <!-- <li><a>Log In</a></li> -->
         <%# end %>
       </ul>   
 
