--- a/app/views/webartists/show.html.erb
+++ b/app/views/webartists/show.html.erb
@@ -16,7 +16,10 @@
 </div>
 
 <br/>
-<%= image_tag(@webartiste.get_art) %>
+
+<div class="pull-right">
+  <%= image_tag(@webartiste.get_art) %>
+</div>
 
 <div  class="content-scroll">
   <ol>
