--- a/app/views/songs/_form.html.erb
+++ b/app/views/songs/_form.html.erb
@@ -15,7 +15,7 @@
 
     <div class="control-group">
       <%= f.label :name, "Song Name" %>
-      <%= f.text_field :name, value: @song_name, class: "input-xlarge" %>
+      <%= f.text_field :name, value: @song_name || @song.name, class: "input-xlarge" %>
     </div>
 
     <div class="control-group">
