--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -20,7 +20,12 @@
   </span>
 </div>
 
-</br>
+<br />
+
+<%= link_to '<span class="fui-eye-16"></span> Discover Top Songs'.html_safe, webartist_path(@artist.name.gsub(" ", "%20")), class: "btn btn-small btn-primary" %>
+
+<br />
+<br />
 
 
 <div class="pull-right">
