--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -29,7 +29,7 @@
 
 
 <div class="pull-right">
-  <%= image_tag(@artist.get_art(-2)) if @artist.get_art %>
+  <%= image_tag(@artist.image_url) if @artist.image_url %>
 </div>
 
 <table>
